# miniserde-derive-enum

./: .gitignore  Cargo.toml  README.md
src/: de.rs  lib.rs  main.rs  ser.rs
