[package]
name = "miniserde-derive-enum"
version = "0.1.1"
authors = ["eupn <eupn@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for miniserde that support enums."
repository = "https://github.com/eupn/miniserde-derive-enum"
documentation = "https://docs.rs/miniserde-derive-enum"
edition = "2018"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = "1.0"

[dev-dependencies]
miniserde = "0.1"